--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ dependencies:
   syncfusion_flutter_charts: ^29.1.0
   table_calendar: ^3.0.9
   uuid: ^4.2.1
+  connectivity_plus: ^6.1.3
+  shared_preferences: ^2.5.3
+  sqflite: ^2.4.1
+  path_provider: ^2.1.5
+  path: ^1.9.0
 
 dev_dependencies:
   build_runner: ^2.4.15
