--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,3 +48,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+dependency_overrides:
+  analyzer: ^7.3.0
+  meta: ^1.15.0
+  collection: ^1.19.0
+  test: ^1.25.1
