--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,9 @@
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
+org.gradle.configureondemand=true
+org.gradle.daemon=true
+org.gradle.parallel=true
