--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   meta: any
   collection: any
   logging: any
+  google_fonts: ^6.2.1
 dev_dependencies:
   build_runner: ^2.4.15
   custom_lint: ^0.7.5
