--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,14 @@ dependencies:
   fl_chart: ^0.70.2
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_riverpod: ^2.6.1
   freezed_annotation: ^3.0.0
   get_it: ^8.0.3
   go_router: ^14.8.1
   http: ^1.3.0
-  intl: ^0.20.2
+  intl: ^0.19.0
   mobile_scanner: ^6.0.7
   data_table_2: ^2.5.18
   riverpod: ^2.6.1
@@ -52,6 +54,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^3.0.6
   mockito: ^5.4.5
   riverpod_generator: ^2.6.5
   riverpod_lint: ^2.6.5
