--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   url_launcher: ^6.3.1
   photo_view: ^0.15.0
   syncfusion_flutter_pdfviewer: ^29.1.39
+  flutter_cache_manager: ^3.4.1
 dev_dependencies:
   build_runner: ^2.4.15
   custom_lint: ^0.7.5
